# MetaboFlow

./: .gitignore  CLAUDE.md  HANDOFF.md  Makefile  MetaboFlow_v1.r  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-build.yml
deploy/: README.md  deploy.sh  setup-nginx.sh  setup-server.sh
docs/: MetaboFlow_UserManual_EN.docx  MetaboFlow_UserManual_EN.md  MetaboFlow_用户手册_中文.docx  MetaboFlow_用户手册_中文.md  chart-template-catalog.md  engine-comparison-report.md  product-development-plan.md  research-findings.md  research-plan.md
docs/direction-analysis/: 00-SUMMARY-RANKING.md  01-NC-STRATEGY-FINAL.md  AC-PressureTest-Benchmark-GCMS-Consensus.md  AC-PressureTest-ISF-Clinical-Power.md  AC-PressureTest-IsomerUQ-Conformal.md  AC-PressureTest-MNAR-Chimeric.md  ALT1-ISF-Detection.md  ALT2-Consensus-Features.md  ALT3-BatchCorrection-Benchmark.md  ALT4-GCMS-Pretraining.md  AnalChem-PressureTest-Batch1.md  AnalChem-PressureTest-Batch2.md  AnalChem-PressureTest-Batch3-Untested-NC.md  AnalChem-PressureTest-Batch4-Round2-Untested.md  CrossBrainstorm-BioClinicalPathway.md  CrossBrainstorm-EngineProcessing.md  CrossBrainstorm-ML-GlobalCross.md  CrossBrainstorm-UncertaintyAnnotation.md  DeepStressTest-ConfirmedDirections.md  FINAL-RESEARCH-PLAN.md  M10.1-OT-Similarity.md  M10.2-TDA-PeakDetect.md  M10.3-GSP-Pathway.md  M10.4-Conformal-Annotation.md  M10.5-DreaMS-Pretraining.md  M10.6-Endmember-MSI.md  M11.1-Pharma-MIST.md  M11.2-Clinical-Targeted.md  M11.3-MR-Analysis.md  M11.4-Dose-Response.md  M11.5-Microbiome-Metabolome.md  NC-Benchmark-Platform.md  NC-Candidate1-AnnotConfidence.md  NC-Candidate2-DarkMetabolome.md  NC-Candidate3-ReliabilityAtlas.md  NC-Candidate4-EnsembleMetabolomics.md  NC-Candidate5-IntelligentWorkflow.md  NC-Discovery-CrossDiscipline.md  NC-Discovery-Fundamentals.md  NC-Discovery-IndustryPain.md  (+16 more)
example_results/01_differential_peaks/: MethiocarbB差异代谢峰.tiff  MethiocarbB差异峰.csv
plans/: 2026-03-20_findings.md  2026-03-20_metaboflow-remaining-tasks.md  2026-03-20_progress.md  2026-03-21_phase0-phase1-completion.md
scripts/: build_level3_db.py  build_library_registry.py  migrate_tags.py  setup_dev.sh  verify_parity.R
(+36 files in other folders)
