[project]
name = "metaboflow"
version = "0.1.0"
description = "Metabolomics engine aggregation platform"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "h5py>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pandas-stubs>=2.1",
]
e2e = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "uvicorn>=0.32",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "alembic>=1.14",
    "jinja2>=3.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "scipy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["packages"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/common/metabodata/tests", "tests"]
pythonpath = ["packages/common", "packages/backend", "packages/chart-service"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.hatch.build.targets.wheel]
packages = ["packages/common/metabodata"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
